--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "showcrawler",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jacobg1.github.io/CRUNCHfm",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
@@ -16,6 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "npm run build&&gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
