--- a/package.json
+++ b/package.json
@@ -5,22 +5,28 @@
   "homepage": "https://jacobg1.github.io/CRUNCHfm",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1",
-    "react": "^15.6.1",
+    "jquery": "^3.3.1",
+    "react": "^15.6.2",
     "react-audioplayer": "^0.3.1",
-    "react-bootstrap": "^0.31.3",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.13"
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^15.6.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy" : "npm run build&&gh-pages -d build"
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.0.0"
-  }
+    "gh-pages": "^1.2.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
